--- a/vueFrontEnd/package.json
+++ b/vueFrontEnd/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
+    "vue": "^3.2.36"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
