--- a/vueFrontEnd/package.json
+++ b/vueFrontEnd/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material/fab": "^14.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "vue": "^3.2.36"
