--- a/vueFrontEnd/package.json
+++ b/vueFrontEnd/package.json
@@ -12,7 +12,8 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "vue": "^3.2.36",
-    "vue-simple-calendar": "^6.0.4"
+    "vue-simple-calendar": "^6.0.4",
+    "register-service-worker": "^1.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
